# plugin-telegram

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
src/nakopay_telegram/: __init__.py  bot.py  config.py  nakopay_client.py  storage.py  webhook.py
