[project]
name = "nakopay-telegram"
version = "0.1.0"
description = "Self-host Telegram bot for NakoPay merchants. Long-polls Telegram and proxies /invoice, /balance, /last commands to the NakoPay REST API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "NakoPay", email = "support@nakopay.com" }]
dependencies = [
  "httpx>=0.27,<1.0",
  "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://nakopay.com/integrations/telegram"
Source = "https://github.com/NakoPayHQ/plugin-telegram"
Issues = "https://github.com/NakoPayHQ/plugin-telegram/issues"

[project.scripts]
nakopay-telegram = "nakopay_telegram.bot:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
